SubBt/force-app/main/default/objects/WIP__c/WIP__c.object-meta.xml
<CustomObject>
    <label>WIP</label>
    <nameField>
        <label>WIP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WIP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>