SubBt/force-app/main/default/objects/WIP__c/fields/Actual_Cost_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost_To_Date__c</fullName>
    <label>Actual Cost To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>