SubBt/force-app/main/default/objects/WIP__c/fields/Actual_GM_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_GM_To_Date__c</fullName>
    <label>Actual GM To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>