SubBt/force-app/main/default/objects/WIP__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>WIP</relationshipLabel>
    <relationshipName>WIP</relationshipName>
    <type>Lookup</type>
</CustomField>