SubBt/force-app/main/default/objects/WIP__c/fields/Invoiced_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_To_Date__c</fullName>
    <inlineHelpText>Amount of the Contract that has been invoiced to the Customer.</inlineHelpText>
    <label>Invoiced To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>