SubBt/force-app/main/default/objects/WIP__c/fields/Over_Under_Billed__c.field-meta.xml
<CustomField>
    <fullName>Over_Under_Billed__c</fullName>
    <label>Over/Under Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>